--- a/Drought_Farms.ipynb
+++ b/Drought_Farms.ipynb
@@ -307,6 +307,16 @@
     },
     {
       "metadata": {
+        "id": "j1X2NP8Pu0JJ",
+        "colab_type": "text"
+      },
+      "cell_type": "markdown",
+      "source": [
+        "The variable **sum** here is where our final map is. This is the list of figure 3."
+      ]
+    },
+    {
+      "metadata": {
         "id": "fr6jl_-NG8pm",
         "colab_type": "code",
         "colab": {
@@ -524,7 +534,10 @@
       "source": [
         "INPUT:  * The longitude (x axis of the superimposed plot) and latitude (y axis of the superimposed plot)\n",
         "              * Weather avg_highlow_delta\n",
-        "              * region number (to-do)"
+        "              * region number (to-do)\n",
+        "              \n",
+        " OUTPUT: \n",
+        " * Farm yes, farm no"
       ]
     },
     {
@@ -535,10 +548,106 @@
       },
       "cell_type": "code",
       "source": [
-        ""
+        "#X_net = []\n",
+        "#def train():\n",
+        "  # Here, brute force the longitude and latitude, query the satelite, and collect training data.\n",
+        " # X_train = []\n",
+        "  #return null\n",
+        "\n",
+        "# in the future we'll use decision trees, but training and testing datasets aren't openly available without brute forcing requests to the satelite... which would take ages... so we are just going to do this with plain weights"
       ],
       "execution_count": 0,
       "outputs": []
+    },
+    {
+      "metadata": {
+        "id": "aIZaCA4nt0Pr",
+        "colab_type": "text"
+      },
+      "cell_type": "markdown",
+      "source": [
+        "What this is doing is using a makeshift scale with weights, which takes in the weather high-low average delta for this week, longitude, and latitude. From long and lat it gets the intensity from FIGURE 3 in the earlier plots - so the superimposed graph.\n",
+        "It will then repeat this for all longitudes specified in the bounding area, with their respective latitudes."
+      ]
+    },
+    {
+      "metadata": {
+        "id": "bDscEOYSsOra",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "cell_type": "code",
+      "source": [
+        "#dummy, we'd be getting this from the plot\n",
+        "values_for_all_long = [10,20,30,40,50,60,70,80,90,100]\n",
+        "#dummy, we'd be getting this from the plot\n",
+        "values_for_respective_lat = [90, 80, -16, 28, 30, 40, 60, 80, -18, -12]"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "metadata": {
+        "id": "hLiWLcCjtPHR",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "cell_type": "code",
+      "source": [
+        "def calculate_scale(long, lat, weather):\n",
+        "  #first get the intensity from the superimposed graph with these longitude and latitude\n",
+        "  # we do this by longitude (as it's on the x axis of the plot)\n",
+        "  # print(wms_vegetation[0][10][-1]) this gets what the intensity is when longitude = 10 and latitude is the last value possible (so the largest latitude) \n",
+        "  WEATHER_WEIGHT = 0.25\n",
+        "  INTENSITY_WEIGHT = 0.75\n",
+        "  intensity = 0\n",
+        "  for i in range(0, len(values_for_all_long)):\n",
+        "    respective_lat = values_for_respective_lat[i]\n",
+        "    respective_long = values_for_all_long[i]\n",
+        "    #this intensity is the NDWI + NDVI\n",
+        "    intensity += sum[0][respective_lat][respective_long]    \n",
+        "  weighted_value = 1+(WEATHER_WEIGHT * weather)+(INTENSITY_WEIGHT * intensity)"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "metadata": {
+        "id": "Lg9eRFVGw3hq",
+        "colab_type": "text"
+      },
+      "cell_type": "markdown",
+      "source": [
+        "### The value from the scale\n",
+        "calculate_scale() returns a weighted sum. You need to plug IN:\n",
+        "* longitude and latitude that is dark + concentrated from map figure 3\n",
+        "* weather high-low delta from the current week (this is from the avg_highlow_delta)"
+      ]
+    },
+    {
+      "metadata": {
+        "id": "YCnNMZtrwd4p",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "cell_type": "code",
+      "source": [
+        "YOUR_LONG = 0 \n",
+        "YOUR_LAT = 0\n",
+        "print(calculate_scale(YOUR_LONG, YOUR_LAT, avg_highlow_delta))"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "metadata": {
+        "id": "6EfLxIh8xlDN",
+        "colab_type": "text"
+      },
+      "cell_type": "markdown",
+      "source": [
+        "Copyright Arman Bhalla, 2018. All Rights Reserved."
+      ]
     }
   ]
 }
